--- a/kapitel-3/bloggen/style.css
+++ b/kapitel-3/bloggen/style.css
@@ -2,40 +2,54 @@
 html {
     box-sizing: border-box;
 }
-*, *:before, *:after {
+
+*,
+*:before,
+*:after {
     box-sizing: inherit;
 }
-body, h1, h2, h3, h4, h5, h6, p, ul {
+
+body,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+ul {
     margin: 0;
     padding: 0;
 }
+
 /*Sidans layout*/
 
-body{
-
+body {
+    background-color: #ffb703;
+    color: #219ebc;
+    background-image: url(./bilder/abstract-abstract-art-abstract-painting-1293120.jpg) ;
 }
-div.sidan{
-
+div.sidan {
+    width: 500px;
+    background-color: #fb8500;
+    padding: 50px;
+    margin: auto;
 }
-div.inlägg{
 
+div.inlägg {
+background-color: #023047;
+padding: 50px;
+margin: 30px;
 }
-
 /* Innehållets utseende*/
-h1{
+h1 {}
 
-}
-h2{
+h2 {}
 
-}
-img{
-
-}
-p.datum{
-
-}
-p{
-
+img {
+    width: 100%;
 }
 
+p.datum {}
 
+p {}
