tränat på div-boxar, flex, flex riknting, snippet

--- a/kapitel-3/bildgalleri/style.css
+++ b/kapitel-3/bildgalleri/style.css
@@ -1,7 +1,17 @@
 @import url('https://fonts.googleapis.com/css2?family=DotGothic16&family=Gugi&display=swap');
 
 
-
+/* Enkel CSS-reset */
+html {
+  box-sizing: border-box;
+}
+*, *:before, *:after {
+   box-sizing: inherit;
+}
+body, h1, h2, h3, h4, h5, h6, p, ul {
+    margin: 0;
+padding: 0;
+}
 
 
 body{
@@ -20,6 +30,7 @@ h1{
     font-family: "Gugi", sans-serif;
     font-size: 120px;
     text-align: center;
+    margin-bottom: 20px;
 }
 h2{
 font-size: 30px;
@@ -36,6 +47,7 @@ border-radius: 20px;
 }
 img{
     width: 100% ;
+    margin-bottom: 20px;
 }
 h3{
 
