--- a/kapitel-4/skapa eget portofolio/style.css
+++ b/kapitel-4/skapa eget portofolio/style.css
@@ -15,7 +15,7 @@ padding: 0;
 
 
 body{
-background-color: black;
+background-color: rgb(4, 149, 252);
 background-image: url(./bilder/2-apollo-15-on-moon-1.webp);
 }
 
@@ -24,7 +24,8 @@ background-image: url(./bilder/2-apollo-15-on-moon-1.webp);
     width: 800px;
     padding: 30px;
     margin: auto;
-   font-family: "DotGothic16", sans-serif;;
+   font-family: "DotGothic16", sans-serif;
+   
 }
 h1{
     font-family: "Gugi", sans-serif;
@@ -38,8 +39,8 @@ text-align: center;
 }
 
 /* Boxarnas utseende*/
-.bild{
-background-color: #000;
+.ruta{
+background-color: #463195;
 color: white;
 padding: 50px;
 margin-bottom: 50px;
