tränat på att styla som pro!

--- a/kapitel-6/burger-king/style.css
+++ b/kapitel-6/burger-king/style.css
@@ -1,14 +1,29 @@
+@import url('https://fonts.googleapis.com/css2?family=Modak&display=swap');
+
 /* Enkel CSS-reset */
 html {
   box-sizing: border-box;
 }
-*, *:before, *:after {
-   box-sizing: inherit;
+
+*,
+*:before,
+*:after {
+  box-sizing: inherit;
 }
-body, h1, h2, h3, h4, h5, h6, p, ul {
-    margin: 0;
-padding: 0;
+
+body,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+ul {
+  margin: 0;
+  padding: 0;
 }
+
 /*
 Bg färg= #FBF7F1
 Bg bild färg= #F5EBDC
@@ -21,17 +36,75 @@ Typsnitt = Modak
 
 */
 
-body{}
-.kontainer{}
+body {
+  background-color: #FBF7F1;
+}
 
-.sidhuvud{}
-.sidhuvud .meny{}
-.sidhuvud .meny a{}
-.sidhuvud .erbjudanden{}
+.kontainer {
+  width: 1200px;
+  font-weight: 400;
+  font-style: normal;
+  color: black;
+  margin: auto;
+  font-family: "Modak", serif;
 
-.innehall{}
-.innehall h2{}
-.innehåll .kolnumner-3{}
-.innehåll .kolnumner-3 .burgare{}
-.innehåll .kolnumner-3 .burgare img{}
-.innehåll .kolnumner-3 .burgare p{}
+}
+
+.sidhuvud {
+  display: flex;
+  justify-content: space-between;
+}
+
+.sidhuvud .meny {}
+
+.sidhuvud .meny a {
+  text-decoration: none;
+  color: black;
+  padding: 10px;
+}
+
+.sidhuvud .erbjudanden {
+  text-decoration: none;
+  color: rgb(255, 0, 0);
+  padding: 10px;
+  border: 5px solid red;
+  border-radius: 5px;
+}
+
+.innehall {}
+
+.innehall h2 {
+  font-size: 45px;
+  font-weight: 400;
+}
+
+.innehall .kolumner-3 {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  gap: 20px;
+
+}
+
+.innehall .kolumner-3 .burgare {
+  background-color: bisque;
+  text-align: center;
+  border-radius: 10px;
+  height: 150px;
+  cursor: pointer;
+}
+.innehall .kolumner-3 .burgare:hover{
+height: 300px;
+transition-duration: 500ms;
+}
+
+.innehall .kolumner-3 .burgare img {
+  width: 300px;
+}
+
+.innehall .kolumner-3 .burgare p {
+  font-size: 30px;
+
+}
+.innehall .kolumner-3 .burgare p.fix{
+  margin-top: 60px;
+}
