Tränat på css gradient, styla grid basics

--- a/kaptiel-7/apwebb/style.css
+++ b/kaptiel-7/apwebb/style.css
@@ -1,40 +1,65 @@
 /* Enkel CSS-reset */
 html {
-  box-sizing: border-box;
-}
-*, *:before, *:after {
-   box-sizing: inherit;
-}
-body, h1, h2, h3, h4, h5, h6, p, ul {
-    margin: 0;
-padding: 0;
-}
-img{
-    width: 100%;
+    box-sizing: border-box;
 }
 
-.kontainer{
-width: 1000px;
-margin: auto;
-display: grid;
-grid-template-columns: 3fr 1fr;
-grid-template-areas:none
-"sidhuvud sidhuvud"
-"sidfot sidofot";
+*,
+*:before,
+*:after {
+    box-sizing: inherit;
 }
-header{
-background-color: green;
-grid-area: sidhvud;
+
+body,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+ul {
+    margin: 0;
+    padding: 0;
 }
-main{
+
+img {
+    width: 100%;
+}
+body{
+    background-image: url("./bilder/chris-abney-qLW70Aoo8BE-unsplash.jpg");
+}
+.kontainer {
+    width: 1000px;
+    margin: auto;
+    display: grid;
+    gap: 20px;
+    grid-template-columns: 3fr 1fr;
+    grid-template-areas:
+        "sidhuvud sidhuvud"
+        "innehall sidebar"
+        "sidfot sidofot";
+}
+header {
+    grid-area: sidhuvud;
+}
+main {
     grid-area: innehall;
-background-color: lightcoral;
+    background-color: rgb(255, 255, 255);
+    border-radius: 20px;
 }
-aside{
+aside {
     grid-area: sidebar;
-background-color: yellow;
+    background-color: rgb(255, 255, 255);
+    border-radius: 20px;
 }
-footer{
+footer {
     grid-area: sidfot;
-background-color: blueviolet;
+    background-color: rgb(255, 255, 255);
+    border-radius: 20px;
+}
+h1{
+    color: white;
+}
+h2{
+    color: white;
 }
